fixed font sizes and text alignment for smaller devices

--- a/styles/layout.module.css
+++ b/styles/layout.module.css
@@ -189,26 +189,25 @@
     rgba(251, 188, 89, 0.1) 100%
   );
 }
-
 /* X-Small devices (portrait phones, less than 576px) */
-/* No media query for `xs` since this is the default in Bootstrap */
-
-/* Small devices (landscape phones, 576px and up) */
-/* @media (min-width: 576px) { */
-/* } */
-
-/* Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) {
+@media (max-width: 575.98px) {
+  .main h1,
+  .main h2 {
+    font-size: 1.2rem;
+    text-align: center;
+  }
 }
-
-/* Large devices (desktops, 992px and up) */
-@media (min-width: 992px) {
+/* Small devices (landscape phones, less than 768px) */
+@media (max-width: 767.98px) {
 }
-
-/* X-Large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {
+/* Medium devices (tablets, less than 992px) */
+@media (max-width: 991.98px) {
 }
-
-/* XX-Large devices (larger desktops, 1400px and up) */
-@media (min-width: 1400px) {
+/* Large devices (desktops, less than 1200px) */
+@media (max-width: 1199.98px) {
 }
+/* X-Large devices (large desktops, less than 1400px) */
+@media (max-width: 1399.98px) {
+}
+/* XX-Large devices (larger desktops) */
+/* No media query since the xxl breakpoint has no upper bound on its width */
